# open-graph-tester.py

./: main.py  pyproject.toml
opgparse/: __init__.py
opgparse/templates/: index.html
templates/: form.html  index.html  opg.html
