[tool.poetry]
name = "repl_python3_beta_open-graph-testerpy"
version = "0.1.0"
description = ""
authors = ["Maverickdev55 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
bs4 = "^0.0.1"
Flask = "^2.0.1"
MarkupSafe = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
